<resources>
    <string name="app_name">Managing_M.E.I</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_management">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_company_health">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_providers_activity">Fornecedores</string>
    <string name="title_fragment_client">Clientes</string>
    <string name="title_fragment_seals">Vendas</string>
    <string name="title_fragment_produto">Produtos</string>
    <string name="title_fragment_ec_mei">MEI</string>
    <string name="cash_flow_activity">Fluxo</string>
    <string name="profitability">Dividas</string>
    <string name="title_total_investment_calculation">Investimentos</string>
    <string name="title_floating_capital">Giro</string>
    <string name="title_check_list">Afazeres</string>
</resources>