<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_ec_mei"
        android:icon="@drawable/ic_baseline_leaderboard_24"
        android:title="@string/title_fragment_ec_mei" />

    <item
        android:id="@+id/fragment_produto"
        android:icon="@drawable/ic_baseline_store_24"
        android:title="@string/title_fragment_produto" />

    <item
        android:id="@+id/fragment_seals"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_fragment_seals" />

    <item
        android:id="@+id/fragment_client"
        android:icon="@drawable/ic_baseline_people_alt_24"
        android:title="@string/title_fragment_client" />

    <item
        android:id="@+id/providers_activity"
        android:icon="@drawable/ic_baseline_shopping_bag_24"
        android:title="@string/title_providers_activity" />

</menu>