<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/total_investment_calculation_fragment"
        android:icon="@drawable/ic_baseline_calculate_24"
        android:title="@string/title_total_investment_calculation" />

    <item
        android:id="@+id/profitability_fragment"
        android:icon="@drawable/ic_baseline_trending_up_24"
        android:title="@string/profitability" />

    <item
        android:id="@+id/floating_capital_fragment"
        android:icon="@drawable/ic_baseline_restore_24"
        android:title="@string/title_floating_capital" />

    <item
        android:id="@+id/check_list_activity"
        android:icon="@drawable/ic_baseline_library_add_check_24"
        android:title="@string/title_check_list" />

    <item
        android:id="@+id/cash_flow_activity"
        android:icon="@drawable/ic_baseline_leaderboard_24"
        android:title="@string/cash_flow_activity" />

</menu>